# toastiepy

./: .gitignore  README.md  example.py  pyproject.toml  setup.py  test.py  testserver.py
.github/workflows/: pypi-publish.yml  test-py.yml
mockserver/: form.html  index.html  subserver.html  test.txt  websocket.html
mockserver/static/: index.css  rand404.js  subserver.css  websocket.js
tests/: mockserver.test.py  static.test.py
tests/lib/: mockserver.test.py
toastiepy/: __init__.py  constants.py  http.py  httpws.py  request.py  response.py  server.py  websock.py
toastiepy/httpws/: __init__.py  client.py  websock.py
