[build-tools]
requires = ["setuptools >= 80.9.0", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "toastiepy"
dynamic = ["version"]
description = "ToastiePy is an express like python based http server framework."
readme = "README.md"
authors = [
	{ name = "Aaron Menadue", email = "aaron.menadue+toastiepy@gmail.com" },
]
keywords = [
	"web",
	"http",
	"websocket",
	"toastiepy",
	"toastiebun",
	"express",
]
dependencies = [
	"asyncio>=4.0.0",
]

[tool.setuptools]
packages = ["toastiepy"]

[tool.setuptools.dynamic]
version = {attr="toastiepy.__version__"}

[tool.setuptools.package-data]
"toastiepy" = ["toastiepy/toastiepy.ico"]